--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 					<ul>
 						<li><a href="">1</a></li>
 						<li><a href="">2</a></li>
-						<li><a href="">3</a></li>
+						<li><a href=""></a></li>
 						<li><a href="">4</a></li>
 					</ul>
 				</div>
