--- a/index.html
+++ b/index.html
@@ -305,55 +305,10 @@
 				<div class="block-menu">
 					<h3></h3>
 					<ul>
-						<li><a href="">ffffff</a></li>
 						<li><a href=""></a></li>
-						<li><a href="">ffffff</a></li>
 						<li><a href=""></a></li>
-
-						ffffff
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
 					</ul>
 				</div>
 			</div>
