--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
 				<div class="block-menu">
 					<h3></h3>
 					<ul>
-						<li><a href="">1</a></li>
-						<li><a href="">2</a></li>
 						<li><a href=""></a></li>
-						<li><a href="">4</a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
 					</ul>
 				</div>
 			</div>
