--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
-						<li><a href="">djdkfjdkjkjdkjkjkjkjkjkj</a></li>
+						<li><a href=""></a></li>
 					</ul>
 				</div>
 			</div>
