--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				<div class="block-menu">
 					<h3></h3>
 					<ul>
-						<li><a href=""></a></li>
+						<li><a href="">cool</a></li>
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
