изменил select, начал верстать соц.иконки

--- a/index.html
+++ b/index.html
@@ -147,7 +147,14 @@
 					<input type="button" name="sub"/>
 				</form>	
 			</div>
-			<div class="social-icon"></div>
+			<div class="social-icon">
+				<ul>
+					<li><a href="" title="social icons"></a></li>
+					<li><a href="" title="social icons"></a></li>
+					<li><a href="" title="social icons"></a></li>
+					<li><a href="" title="social icons"></a></li>
+				</ul>
+			</div>
 		</div>
 		<div class="slider">
 			<div class="layout-center">
@@ -305,7 +312,7 @@
 				<div class="block-menu">
 					<h3></h3>
 					<ul>
-						<li><a href="">coo</a></li>
+						<li><a href=""></a></li>
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
 						<li><a href=""></a></li>
