сверстал social-icons

--- a/index.html
+++ b/index.html
@@ -31,129 +31,127 @@
 			</div>
 		</header>
 		<nav>
-		    <div class="layout-center">
-		        <ul>
-		            <li class="home"><a href=""></a></li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Desktops</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Laptops & Notebooks</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Components</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Tables</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Software</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Phones & PDAs</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Cameras</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		            <li class="drop">
-		                <div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Contact</a>
-		                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-		                        <li><a href="">Sony(2)</a></li>
-		                        <li><a href="">Android(4)</a></li>
-		                        <li><a href="">Apple(7)</a></li>
-		                        <li><a href="">Acer(53)</a></li>
-		                        <li><a href="">HP(78)</a></li>
-		                        <li><a href="">Intel(5)</a></li>
-		                    </ul>
-		                </div>
-		            </li>
-		        </ul>
-		    </div>
+			<div class="layout-center">
+				<ul>
+					<li class="home"><a href=""></a></li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Desktops</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Laptops & Notebooks</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Components</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Tables</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Software</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Phones & PDAs</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Cameras</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="drop">
+						<div class="dropdown"> <a class="drop-link" data-toggle="dropdown" href="#">Contact</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+								<li><a href="">Sony(2)</a></li>
+								<li><a href="">Android(4)</a></li>
+								<li><a href="">Apple(7)</a></li>
+								<li><a href="">Acer(53)</a></li>
+								<li><a href="">HP(78)</a></li>
+								<li><a href="">Intel(5)</a></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</nav>
 		<div class="social">
-			<div class="layout-center">
+			<div class="layout-center clearfix">
 				<p>Welcome visitor you can login or create an account.</p>
 				<form action="#" name="myform" method="post" >
-					<div class="select input-border">
-						<select name="currency">
-							<option value="">Dollars</option>
-							<option value="">Rub</option>
-						</select>
-					</div>
-					<input class="input-border" type="text" name="search"/>
+					<select class="input-border" name="currency">
+						<option value="">Dollars</option>
+						<option value="">Rub</option>
+					</select>
+					<input class="input-border" type="text" name="search" placeholder="Search"/>
 					<input type="button" name="sub"/>
-				</form>	
-			</div>
-			<div class="social-icon">
-				<ul>
-					<li><a href="" title="social icons"></a></li>
-					<li><a href="" title="social icons"></a></li>
-					<li><a href="" title="social icons"></a></li>
-					<li><a href="" title="social icons"></a></li>
-				</ul>
+				</form>
+				<div class="social-icons">
+					<ul>
+						<li><a href="" title="social icons"></a></li>
+						<li><a href="" title="social icons"></a></li>
+						<li><a href="" title="social icons"></a></li>
+						<li><a href="" title="social icons"></a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="slider">
@@ -204,9 +202,9 @@
 				<div class="featured">
 					<h4>FEATURED</h4>
 					<div class="product">
-					<div class="img">
-						<img src="img/produck-1.jpg" alt="">
-					</div>
+						<div class="img">
+							<img src="img/produck-1.jpg" alt="">
+						</div>
 						<h5 class="product-title"></h5>
 						<div class="button"></div>
 						<div class="price">
@@ -332,9 +330,9 @@
 		<noscript><link rel="stylesheet" href="[fallback css]" /></noscript>
 		<script src="js/jquery.placeholder.min.js"></script>
 		<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
-	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/main-js.js"></script>
-</body>
-</html>
+		<![endif]-->
+		<script src="libs/jquery/jquery-1.11.2.min.js"></script>
+		<script src="js/bootstrap.js"></script>
+		<script src="js/main-js.js"></script>
+	</body>
+	</html>
